WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183780
height miscalcuation in SVG
https://bugs.webkit.org/show_bug.cgi?id=183780
Summary
height miscalcuation in SVG
Alastair Campbell
Reported
2018-03-20 09:12:01 PDT
Zoom on this SVG example has unexpected effects:
https://w3c.github.io/graphics-aria/img/nested-figures.html
(NB: text-size increases work fine, it is the standard pixel-based zoom that is affected.) It appears that the (inline) y value on the <rect> elements is not increased with the zoom, so the text goes behind the rect. Noticed whilst @AmeliasBrain was working on the spec:
https://w3c.github.io/graphics-aria/#role_other
Attachments
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2022-07-15 16:18:32 PDT
Confirmed this is an issue in Safari. Works properly in Chrome and Firefox.
Radar WebKit Bug Importer
Comment 2
2022-07-15 16:18:44 PDT
<
rdar://problem/97099774
>
Ahmad Saleem
Comment 3
2023-07-31 16:41:31 PDT
For future reference, LBSE (Layer Based SVG Engine) does not have height miscalculation issue to make 'text' disappear but it has other issues but still good to note down. Tested using WebKit ToT (
266457@main
) with LBSE Internal flag turned on.
Rob Buis
Comment 4
2026-01-21 09:59:09 PST
(In reply to Ahmad Saleem from
comment #3
)
> For future reference, LBSE (Layer Based SVG Engine) does not have height > miscalculation issue to make 'text' disappear but it has other issues but > still good to note down. Tested using WebKit ToT (
266457@main
) with LBSE > Internal flag turned on.
Ahmad, I think this works fine for legacy SVG these days? If so we can add [LBSE] to the bug title for clarity (since there still are problems with it in LBSE for sure).
Ahmad Saleem
Comment 5
2026-01-21 10:33:28 PST
(In reply to Rob Buis from
comment #4
)
> (In reply to Ahmad Saleem from
comment #3
) > > For future reference, LBSE (Layer Based SVG Engine) does not have height > > miscalculation issue to make 'text' disappear but it has other issues but > > still good to note down. Tested using WebKit ToT (
266457@main
) with LBSE > > Internal flag turned on. > > Ahmad, I think this works fine for legacy SVG these days? If so we can add > [LBSE] to the bug title for clarity (since there still are problems with it > in LBSE for sure).
We have dedicated keyword for issues which also reproduce on LayerBasedSVGEngine, I just added to this bug as well.
Rob Buis
Comment 6
2026-01-22 09:16:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57052
EWS
Comment 7
2026-01-30 01:57:53 PST
Committed
306480@main
(90a20da0a908): <
https://commits.webkit.org/306480@main
> Reviewed commits have been landed. Closing PR #57052 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug