height miscalcuation in SVG https://bugs.webkit.org/show_bug.cgi?id=183780 rdar://97099774

Reviewed by Nikolas Zimmermann.

Only take zoom into account for standalone SVG documents when
computing replaced logical width/height for RenderSVGRoot.

* LayoutTests/platform/mac-tahoe-wk2-lbse-text/TestExpectations:
* Source/WebCore/rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::computeReplacedLogicalWidth const):
(WebCore::RenderSVGRoot::computeReplacedLogicalHeight const):

Canonical link: https://commits.webkit.org/306480@main